# GroupSourcesByFolder.cmake

./: CMakeLists.txt
test/: CMakeLists.txt
